# personal-site

./: .gitignore  Dockerfile  LICENSE  app.py  application.py  auth.py  blog_utils.py  requirements.txt  sample_settings.cfg
api/: .gitignore  Cargo.toml
api/protos/: api.proto
api/sql/: schema.sql
api/src/: db.rs  main.rs  protos.rs
iface/: blog.pb  blog.proto  generate.sh
modules/: admin.py  api.py  blog.py
react/: package-lock.json  package.json
react/public/: index.html  manifest.json
react/src/: App.tsx  BlogHome.tsx  Contact.tsx  Header.tsx  Home.tsx  Projects.tsx  Resume.tsx  index.tsx  reportWebVitals.ts  setupTests.ts
static/: atproto-did
static/css/: portfolio.css
storage/: __init__.py  interface.py  s3.py  tmp.py
templates/: admin.html  blog.html  blog.ssp  blog_page.html  blog_tag_page.html  blog_tags.html  contact.html  contact.ssp  home.html  home.ssp  projects.html  projects.ssp  template.html  template.ssp
templates/admin/: add_image.html  create_blog.html  create_tag.html  delete_blog.html  edit_blog.html  edit_tag.html  list_blogs.html  list_images.html  list_tags.html  login.html  main.html
templates/blog/: post1.html  post1.ssp  post10.html  post10.ssp  post11.html  post11.ssp  post12.html  post12.ssp  post13.html  post3.html  post3.ssp  post4.html  post4.ssp  post5.html  post5.ssp  post6.html  post6.ssp  post9.html  post9.ssp  postfinal.ssp
templates/projects/: car.html  car.ssp  twitcher.html  twitcher.ssp
utils/: blog.py  images.py  tags.py
