[package]
name = "api"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
log = "0.4"
prost = "0.8"
simple_logger = "1.12"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
tonic = "0.5"

[build-dependencies]
tonic-build = "0.5"
